--- a/dia-03/ejercicio-04.html
+++ b/dia-03/ejercicio-04.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="author" content="Juan Jose Hernandez">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -11,7 +10,10 @@
         <h1>Ejercicios Dia3</h1>
         <nav>
             <ul>
-                <il><a href="#punto1">Punto1</a></il>
+                <li><a href="#punto1">Punto1</a></li>
+                <li><a href="#punto2">Punto2</a></li>
+                <li><a href="#punto3">Punto3</a></li>
+                <li><a href="#punto4">Punto4</a></li>
             </ul>
         </nav>
     </header>
@@ -22,7 +24,19 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/3GymExBkKjE?si=m4KE4RaDpClN73dS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
         <section id="punto2">
-            
+            <h3>Punto 2</h3>
+            <audio src="x/birds-singing-audio-tune-165801.mp3" controls autoplay></audio>
+        </section>
+        <section id="punto3">
+            <h3>Punto 3</h3>
+            <img href="x/1raimg.jpg" alt="Img maqueta de gatos" width="500">
+            <img src="x/2daimg.jpg" alt="Img-maqueta-BobEsponja" width="200">
+            <img src="x/3raimg.jpg" alt="Img maqueta de flores" width="100">
+        </section>
+
+        <section id="punto4">
+            <h3>Punto 4</h3>
+            <img src="x/giff.gif" alt="Gif progress" width="350">
         </section>
     </main>
 </body>
