--- a/dia-03/ejercicio-02.html
+++ b/dia-03/ejercicio-02.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="author" content="Juan Jose Hernandez">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -11,7 +10,8 @@
         <h1>Ejercicios Dia3</h1>
         <nav>
             <ul>
-                <il><a href="#punto1">Punto1</a></il>
+                <li><a href="#punto1">Punto1</a></li>
+                <li><a href="#punto2">Punto2</a></li>
             </ul>
         </nav>
     </header>
@@ -22,7 +22,8 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/3GymExBkKjE?si=m4KE4RaDpClN73dS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
         <section id="punto2">
-            
+            <h3>Punto 2</h3>
+            <audio src="audio/birds-singing-audio-tune-165801.mp3" controls autoplay></audio>
         </section>
     </main>
 </body>
