--- a/dia-03/ejercicio-04.html
+++ b/dia-03/ejercicio-04.html
@@ -25,18 +25,18 @@
         </section>
         <section id="punto2">
             <h3>Punto 2</h3>
-            <audio src="x/birds-singing-audio-tune-165801.mp3" controls autoplay></audio>
+            <audio src="archives/" controls autoplay></audio>
         </section>
         <section id="punto3">
             <h3>Punto 3</h3>
-            <img href="x/1raimg.jpg" alt="Img maqueta de gatos" width="500">
-            <img src="x/2daimg.jpg" alt="Img-maqueta-BobEsponja" width="200">
-            <img src="x/3raimg.jpg" alt="Img maqueta de flores" width="100">
+            <img href="archives/" alt="Img maqueta de gatos" width="500">
+            <img src="archives/" alt="Img-maqueta-BobEsponja" width="200">
+            <img src="archives/" alt="Img maqueta de flores" width="100">
         </section>
 
         <section id="punto4">
             <h3>Punto 4</h3>
-            <img src="x/giff.gif" alt="Gif progress" width="350">
+            <img src="archives/" alt="Gif progress" width="350">
         </section>
     </main>
 </body>
