--- a/dia-03/ejercicio-06.html
+++ b/dia-03/ejercicio-06.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="margin: 20px">
     <header>
         <h1>Ejercicios Dia3</h1>
         <nav>
-            <ul>
+            <ul class="ul-nav">
                 <li><a href="#punto1">Punto1</a></li>
                 <li><a href="#punto2">Punto2</a></li>
                 <li><a href="#punto3">Punto3</a></li>
                 <li><a href="#punto4">Punto4</a></li>
                 <li><a href="#punto5">Punto5</a></li>
+                <li><a href="#punto6">Punto6</a></li>
             </ul>
         </nav>
     </header>
@@ -26,30 +27,39 @@
         </section>
         <section id="punto2">
             <h3>Punto 2</h3>
-            <audio src="x/birds-singing-audio-tune-165801.mp3" controls muted></audio>
+            <audio src="archives/" controls muted></audio>
         </section>
         <section id="punto3">
             <h3>Punto 3</h3>
-            <img href="archives/" alt="Img maqueta de gatos" width="500">
-            <img src="archives/" alt="Img-maqueta-BobEsponja" width="200">
-            <img src="archives/" alt="Img maqueta de flores" width="100">
+            <img href="arch/1raimg.jpg" alt="Img maqueta de gatos" width="500">
+            <img src="archives/2daimg.jpg" alt="Img-maqueta-BobEsponja" width="200">
+            <img src="archives/3raimg.jpg" alt="Img maqueta de flores" width="100">
         </section>
 
         <section id="punto4">
             <h3>Punto 4</h3>
-            <img src="archives/" alt="Gif progress" width="350">
+            <img src="archives/giff.gif" alt="Gif progress" width="350">
         </section>
 
         <section id="punto5">
             <h3>Punto 5</h3>
             <p>Haz clic en el cactus :)</p>
-            <img src="archives/" usemap="#image-map" width="300">
+            <img src="archives/1raimg.jpg" usemap="#image-map" width="300">
 
             <map name="image-map">
                 <area target="_blank" alt="Img cactus" href="https://es.wikipedia.org/wiki/Cactaceae" coords="73,264,225,400" shape="rect">
             </map>
+        </section>
 
+        <section id="punto6">
+            <h3>Punto 6</h3>
+            <label for="download">Haz click para descargar</label>
+            <a href="archives/1raimg.jpg" download="Imagen" id="download">Download img</a>
+            <br>
+            <a href="https://media.istockphoto.com/id/1395191574/es/foto/pantalla-de-televisi%C3%B3n-led-negra-en-blanco-aislada.webp?s=1024x1024&w=is&k=20&c=1l3q2Ksul-SLKiB9T2-BXZiyJ0tXuZx6IuWdg36ZvyY=" target="_blanck">Ir a link _blanck</a>
+            <br>
+            <a href="https://media.istockphoto.com/id/1395191574/es/foto/pantalla-de-televisi%C3%B3n-led-negra-en-blanco-aislada.webp?s=1024x1024&w=is&k=20&c=1l3q2Ksul-SLKiB9T2-BXZiyJ0tXuZx6IuWdg36ZvyY=" title="Imagen de un televisor">Pasa el cursor por el link</a>
         </section>
     </main>
 </body>
-</html>
+</html> 
