--- a/dia-03/ejercicio-03.html
+++ b/dia-03/ejercicio-03.html
@@ -24,13 +24,13 @@
         </section>
         <section id="punto2">
             <h3>Punto 2</h3>
-            <audio src="x/birds-singing-audio-tune-165801.mp3" controls autoplay></audio>
+            <audio src="archives/" controls autoplay></audio>
         </section>
         <section id="punto3">
             <h3>Punto 3</h3>
-            <img href="x/1raimg.jpg" alt="Img maqueta de gatos" width="500">
-            <img src="x/2daimg.jpg" alt="Img-maqueta-BobEsponja" width="200">
-            <img src="x/3raimg.jpg" alt="Img maqueta de flores" width="100">
+            <img href="archives/" alt="Img maqueta de gatos" width="500">
+            <img src="archives/" alt="Img-maqueta-BobEsponja" width="200">
+            <img src="archives/" alt="Img maqueta de flores" width="100">
         </section>
     </main>
 </body>
