--- a/dia-03/ejercicio-10.html
+++ b/dia-03/ejercicio-10.html
@@ -33,6 +33,14 @@
         .icons {
             margin: 10px;
         }
+
+        .img-galery {
+            margin: 10px;
+            padding: 10px;
+            background-color: black;
+            display: flex;
+            justify-content: space-around;
+        }
     </style>
 </head>
 <body style="margin: 20px">
@@ -47,6 +55,9 @@
                 <li><a href="#punto5">Punto5</a></li>
                 <li><a href="#punto6">Punto6</a></li>
                 <li><a href="#punto7">Punto7</a></li>
+                <li><a href="#punto8">Punto8</a></li>
+                <li><a href="#punto9">Punto9</a></li>
+                <li><a href="#punto10">Punto10</a></li>
             </ul>
         </nav>
     </header>
@@ -114,6 +125,14 @@
 
         <section id="punto10">
             <h3>Galeria de imagenes</h3>
+
+            <div class="img-galery">
+                <div class="img"><img src="archives/1raimg.jpg" alt="Img" width="200"></div>
+                <div class="img"><img src="archives/2daimg.jpg" alt="Img" width="200"></div>
+                <div class="img"><img src="archives/3raimg.jpg" alt="Img" width="200"></div>
+                <div class="img"><img src="archives/images.jpg" alt="Img" width="200"></div>
+                <div class="img"><img src="archives/licensed-image.jpg" alt="Img" width="200"></div>
+            </div>
         </section>
     </main>
 </body>
